# MofkaDask

./: MofkaPlugin.py  MofkaSchedulerPlugin.py  MofkaWorkerPlugin.py  README.md  config.json  config.txt  consumer.py  launcher.sh  polaris_setup.md  polaris_spack.yaml  producer.py  requirements.txt  script.sh  server.py  spack.yaml  utils.py
Apps/: DDP.py  PMDA.py  ResNet_prediction.py  image_processing.py
Apps/debug_mofka/: dcrnn_train_pytorch.py  research.py
MOFKA/D2024-04-10_18:51:17_W/: ConsumerNode  PMDA.py  client.csv  consumer.e  graph.csv  launcher.sh  polaris.sh  polaris.sh.e1832773  scheduler.e  scheduler.json  scheduler_transition.csv  worker.csv  worker.e
MOFKA/D2024-04-15_23:54:29_W/: 1869180.polaris-pbs-01.hsn.cm.polaris.alcf.anl.gov.OU  MofkaSchedulerPlugin.py  MofkaServerNode  agueroud_mpiexec_id46327-46327_4-15-86193-11222169321164430320_1.darshan  agueroud_python3.10_id45799-45799_4-15-86193-9693416105416655130_1.darshan  agueroud_python3.10_id45817-45817_4-15-86196-3712108392106756142_1.darshan  agueroud_python3.10_id45820-45820_4-15-86196-3031650693357498445_1.darshan  agueroud_python3.10_id45825-45825_4-15-86196-16856110301639937991_1.darshan  agueroud_python3.10_id45828-45828_4-15-86196-17302200511384336115_1.darshan  agueroud_python3.10_id45832-45832_4-15-86196-13109191082598147971_1.darshan  agueroud_uname_id45870-45870_4-15-86199-9819788182690481641_1.darshan  agueroud_uname_id45871-45871_4-15-86199-14520398075817768396_1.darshan  client.csv  consumer.e  graph.csv  (+7 more)
custom/: CMakeLists.txt  MyPartitionSelector.cpp  MySerializer.cpp  README.md
nonBlockingPlugins/: README.md  consumer.py
non_blocking_plugins/: MofkaSchedulerPlugin.py  MofkaWorkerPlugin.py
plugins/: MofkaSchedulerPlugin.py  MofkaWorkerPlugin.py
scripts/: launcher.sh  polaris.sh
(+8 files in other folders)
